2005-06-06 J.R. Heisey <jrheisey@sourceforge.com>
	*src/os_dependent.cc: The environment variable GPSIMPATH may be
	used to specify folders where shared libraries may be found. This
	is primarily for windows developers of gpsim.
	- Small change to prevent load_library() from displaying an error
	message that is not needed.

	*cli/cmd_node.cc: Use a reference instead of allocating a string
	on the local stack.

	*modules/modules.vcproj: Changed Visual Studio build of modules
	to libgpsim_modules.dll


2005-06-04 Scott Dattalo <scott@dattalo.com>
	* gui/gui.h, gui/gui_menu.cc, gui/gui_object.cc, gui/gui_object.h,
	gui/gui_src_asm.cc, gui/gui_statusbar.cc, gui/gui_statusbar.h:
	-- removed the cycle counter and time view from the status bar of
	the register and source windows and moved them to the window that
	contains the buttons.
	-- fixed text-width bugs in the status window.
	-- rewrote the implementation of the gui update code.
	-- Created a 'TimeWidget' class and a 'TimeFormatter' class for
	displaying the cycle counter object.
	-- Added a MainWindow class (kind of empty now).
	-- Re-introduced a few of the GTKWAIT macros.

2005-06-04 Scott Dattalo <scott@dattalo.com>
	* configure.ac, gpsim/Makefile.am: remove the explicit checks for
	the pthread library. 
	
2005-06-04 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc: Allow filenames whose first character is a
	number.

2005-06-04 Scott Dattalo <scott@dattalo.com>
	Patch from: Rob Pearce <rob@bdt-home.demon.co.uk>
	* src/cod.cc: Fixed gramatical error.
	* src/eeprom.cc, src/eeprom.h: Added a new state to the eeprom
	state machine to fix ??
	* src/ioports.cc: fix to the 628 porta comparator.
	
2005-06-03 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc: Added a call to g_main_iteration() to allow GTK
	events to get processed. (This replaces the GTKWAIT macro that was
	removed in the previous commit).

2005-06-02 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc, gui/gui_main.cc: Removed GTKWAIT